# elfio

./: Cargo.toml  LICENSE  README.md
examples/: elfio-readelf.rs
src/: lib.rs  macros.rs
