[package]
name = "elfio"
version = "0.1.0"
authors = ["James Lee <jbit@jbit.net>"]
edition = "2018"
description = "ELF File IO library"
categories = ["development-tools"]
keywords = ["elf", "file"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/jbit/powerline"

[badges]
maintenance = { status = "experimental" }

[dependencies]
serde = { version = "1.0.123", default-features = false, features = ["derive"] }
bincode = "1.3.2"
